--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
                 <span class="ml-3 text-xl">Images Sarch..</span>
             </a>
             <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-white justify-center project">
-                <a href="#" target="_blank" class="mr-10 hover:text-red">Project-1</a></li>
-                <a href="#" target="_blank" class="mr-5 hover:text-red">Project-2</a>
+                <a href="https://rohitpanwar7826.github.io/R.k-pub-and-bar/#" target="_blank"
+                    class="mr-10 hover:text-red">Project-1</a></li>
+                <a href="https://rohitpanwar7826.github.io/News_website/#" target="_blank"
+                    class="mr-5 hover:text-red">Project-2</a>
             </nav>
             <h1 class="text-red-300 mr-10 text-center text-2xl mt-2" id="info">Success</h1>
             <div class="flex flex-wrap ml-auto sarch_bar">
