--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </nav>
             <h1 class="text-red-300 mr-10 text-center text-2xl mt-2" id="info">Success</h1>
             <div class="flex flex-wrap ml-auto sarch_bar">
-                <input class="py-2 px-3 mr-2 border-2 border-gray-600 outline-gray-300 text-black" type="text"
+                <input class="py-2 px-3 border-2 border-gray-600 outline-gray-300 text-black" type="text"
                     id="sarched_data" placeholder="Sarch any think">
                 <button onclick="sarch()"
                     class="inline-flex items-center bg-red-500 border-0 py-1 px-3 focus:outline-none hover:bg-red-600 rounded text-white mt-2 md:mt-0">Sarch
