--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <a href="https://rohitpanwar7826.github.io/News_website/#" target="_blank"
                     class="mr-5 hover:text-red">Project-2</a>
             </nav>
-            <h1 class="text-red-300 mr-10 text-center text-2xl mt-2" id="info">Success</h1>
-            <div class="flex flex-wrap ml-auto sarch_bar">
+            <h1 class="text-red-300 mr-10 text-center text-2xl" id="info">Success</h1>
+            <div class="flex flex-wrap lg:ml-auto sarch_bar">
                 <input class="py-2 px-3 mr-1 border-2 border-gray-600 outline-gray-300 text-black" type="text"
                     id="sarched_data" placeholder="Sarch any think">
                 <button onclick="sarch()"
