--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
 
     <!-- All content -->
-    <div class="container mx-auto px-4 mt-15">
+    <div class="container-fluid mx-auto px-4 mt-15">
         <section class="pt-8 px-4">
             <div class="flex flex-wrap -mx-4" id="imgs_collections">
             </div>
