--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     </div>
 
 
-    <!-- one news- -->
-    <div class="p-10 bg-white">
-        <div class="max-w-6xl h-full mr-auto ml-auto rounded overflow-hidden shadow-lg" id="one_img">
+    <!-- one img- -->
+    <div class="container-fluid p-4 mt-6 bg-white">
+        <div class="w-full h-full mr-auto ml-auto rounded overflow-hidden shadow-2xl" id="one_img">
 
         </div>
     </div>
