--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
 
     <!-- one img- -->
-    <div class="container-fluid p-4 mt-6 bg-white">
-        <div class="w-full h-full mr-auto ml-auto rounded overflow-hidden shadow-2xl" id="one_img">
+    <div class="container-fluid p-2 mt-8 bg-white">
+        <div class="w-full h-full bg-black mr-auto ml-auto rounded overflow-hidden shadow-2xl" id="one_img">
 
         </div>
     </div>
