--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <h1 class="text-red-300 mr-10 text-center text-2xl" id="info">Success</h1>
             <div class="flex flex-wrap lg:ml-auto sarch_bar">
                 <input class="py-2 px-3 mr-1 border-2 border-gray-600 outline-gray-300 text-black" type="text"
-                    id="sarched_data" placeholder="Sarch any think">
+                    id="sarched_data" placeholder="Search any thing">
                 <button onclick="sarch()"
-                    class="inline-flex items-center bg-red-500 border-0 py-1 px-3 focus:outline-none hover:bg-red-600 rounded text-white mt-2 md:mt-0">Sarch
+                    class="inline-flex items-center bg-red-500 border-0 py-1 px-3 focus:outline-none hover:bg-red-600 rounded text-white mt-2 md:mt-0">Search
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                         stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
                         <path d="M5 12h14M12 5l7 7-7 7"></path>
