--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
             <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
                 <img class="w-20 h-12" src="./img/button_r.ico">
-                <span class="ml-3 text-xl">Images Sarch..</span>
+                <span class="ml-3 text-xl">Images Search..</span>
             </a>
             <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-white justify-center project">
                 <a href="https://rohitpanwar7826.github.io/R.k-pub-and-bar/#" target="_blank"
